// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resource base type resource base: 0, iteration: 0 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "port",
  "class": 69646,
  "name": 15,
}
`;

exports[`Resource base type resource base: 0, iteration: 1 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Sleek",
  "class": 25045,
  "name": 15,
}
`;

exports[`Resource base type resource base: 0, iteration: 2 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Home",
  "class": 34276,
  "name": 15,
}
`;

exports[`Resource base type resource base: 0, iteration: 3 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Cheese",
  "class": 28079,
  "name": 15,
}
`;

exports[`Resource base type resource base: 0, iteration: 4 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "zero defect",
  "class": 90191,
  "name": 15,
}
`;

exports[`Resource base type resource base: 0, iteration: 5 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Cambridgeshire",
  "class": 66487,
  "name": 15,
}
`;

exports[`Resource base type resource base: 0, iteration: 6 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "New Jersey",
  "class": 88134,
  "name": 15,
}
`;

exports[`Resource base type resource base: 0, iteration: 7 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Dong",
  "class": 7914,
  "name": 15,
}
`;

exports[`Resource base type resource base: 0, iteration: 8 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "grow",
  "class": 81164,
  "name": 15,
}
`;

exports[`Resource base type resource base: 0, iteration: 9 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "port",
  "class": 28821,
  "name": 15,
}
`;

exports[`Resource base type resource base: 1, iteration: 0 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Quality-focused",
  "class": 42847,
  "name": 15,
}
`;

exports[`Resource base type resource base: 1, iteration: 1 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Manager",
  "class": 49549,
  "name": 15,
}
`;

exports[`Resource base type resource base: 1, iteration: 2 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "infomediaries",
  "class": 34079,
  "name": 15,
}
`;

exports[`Resource base type resource base: 1, iteration: 3 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Incredible",
  "class": 69552,
  "name": 15,
}
`;

exports[`Resource base type resource base: 1, iteration: 4 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Realigned",
  "class": 56348,
  "name": 15,
}
`;

exports[`Resource base type resource base: 1, iteration: 5 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Kenyan Shilling",
  "class": 50236,
  "name": 15,
}
`;

exports[`Resource base type resource base: 1, iteration: 6 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Hill",
  "class": 81484,
  "name": 15,
}
`;

exports[`Resource base type resource base: 1, iteration: 7 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "generating",
  "class": 20587,
  "name": 15,
}
`;

exports[`Resource base type resource base: 1, iteration: 8 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "optical",
  "class": 92212,
  "name": 15,
}
`;

exports[`Resource base type resource base: 1, iteration: 9 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "New Leu",
  "class": 37898,
  "name": 15,
}
`;

exports[`Resource base type resource base: 2, iteration: 0 1`] = `
Object {
  "root": Object {
    "f1": Object {
      "addresses": Array [
        Object {
          "city": "Administrator Metical Crossing",
          "street": "67342",
        },
        Object {
          "city": "engage alarm Table",
          "street": "75462-8477",
        },
        Object {
          "city": "Lake Haylee",
          "street": "32229",
        },
        Object {
          "city": "Boscomouth",
          "street": "14140",
        },
        Object {
          "city": "deliverables International Optimization",
          "street": Object {
            "streetName": "Bettie Plaza",
          },
        },
      ],
    },
    "optional": true,
  },
}
`;

exports[`Resource base type resource base: 2, iteration: 1 1`] = `
Object {
  "root": Object {
    "f1": Object {
      "branch": "ECE",
      "section": "NevaCartwright",
    },
    "optional": true,
  },
}
`;

exports[`Resource base type resource base: 2, iteration: 2 1`] = `
Object {
  "root": Object {
    "f1": Object {
      "addresses": Array [
        Object {
          "city": "New Domenica",
          "street": Object {
            "streetAddress": "2658 Haley Drives",
          },
        },
        Object {
          "city": "Flatleyville",
          "street": "20581-6979",
        },
      ],
    },
    "optional": true,
  },
}
`;

exports[`Resource base type resource base: 2, iteration: 3 1`] = `
Object {
  "root": Object {
    "f1": Object {
      "addresses": Array [
        Object {
          "city": "plug-and-play IB",
          "street": Object {
            "streetName": "Fay Key",
          },
        },
        Object {
          "city": "deliver hard drive",
          "street": Object {
            "streetName": "Nona Island",
          },
        },
        Object {
          "city": "Handcrafted Fresh Keyboard foreground",
          "street": Object {
            "streetName": "Swift Islands",
          },
        },
        Object {
          "city": "New Katlynnland",
          "street": "34618-2588",
        },
        Object {
          "city": "New Emile",
          "street": Object {
            "streetName": "Johnson Track",
          },
        },
        Object {
          "city": "West Jaunitamouth",
          "street": Object {
            "streetAddress": "5309 Susana Ways",
          },
        },
      ],
    },
    "optional": true,
  },
}
`;

exports[`Resource base type resource base: 2, iteration: 4 1`] = `
Object {
  "root": Object {
    "f1": Object {
      "addresses": Array [
        Object {
          "city": "bus Mouse",
          "street": Object {
            "streetAddress": "398 Keebler Cliff",
          },
        },
        Object {
          "city": "RSS",
          "street": Object {
            "streetAddress": "00289 Anabel Forest",
          },
        },
        Object {
          "city": "connect",
          "street": Object {
            "streetAddress": "47283 Oscar Drive",
          },
        },
      ],
    },
    "optional": true,
  },
}
`;

exports[`Resource base type resource base: 2, iteration: 5 1`] = `
Object {
  "root": Object {
    "f1": null,
    "optional": true,
  },
}
`;

exports[`Resource base type resource base: 2, iteration: 6 1`] = `
Object {
  "root": Object {
    "f1": true,
    "optional": true,
  },
}
`;

exports[`Resource base type resource base: 2, iteration: 7 1`] = `
Object {
  "root": Object {
    "f1": Object {
      "addresses": Object {
        "city": "Avon",
        "street": Object {
          "streetName": "Stroman Cliffs",
        },
      },
    },
    "optional": true,
  },
}
`;

exports[`Resource base type resource base: 2, iteration: 8 1`] = `
Object {
  "root": Object {
    "f1": 17.885,
    "optional": true,
  },
}
`;

exports[`Resource base type resource base: 2, iteration: 9 1`] = `
Object {
  "root": Object {
    "f1": Object {
      "branch": "ECE",
      "section": "LottieKonopelski",
    },
    "optional": true,
  },
}
`;

exports[`Resource base type resource base: 3, iteration: 0 1`] = `
Object {
  "f1": 2,
  "f2": Object {
    "branch": "CSE",
  },
  "f3": true,
  "f4": Array [
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
  ],
}
`;

exports[`Resource base type resource base: 3, iteration: 1 1`] = `
Object {
  "f1": 3,
  "f2": Object {
    "address": Array [
      12,
      13,
      14,
      null,
      false,
      "myString",
    ],
    "age": 12,
    "name": 14,
  },
  "f3": Object {
    "branch": 3,
  },
  "f4": Object {
    "name": "Name",
    "surName": "Surname",
  },
}
`;

exports[`Resource base type resource base: 3, iteration: 2 1`] = `
Object {
  "f1": 1,
  "f2": Object {
    "branch": "CSE",
  },
  "f3": Object {
    "branch": 3,
  },
  "f4": Array [
    Object {
      "name": "Name",
      "surName": "Surname",
    },
  ],
}
`;

exports[`Resource base type resource base: 3, iteration: 3 1`] = `
Object {
  "f1": 3,
  "f2": Object {
    "branch": "CSE",
  },
  "f3": Object {
    "branch": 3,
  },
  "f4": Array [
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
  ],
}
`;

exports[`Resource base type resource base: 3, iteration: 4 1`] = `
Object {
  "f1": 28653,
  "f2": Object {
    "address": 99261,
    "age": 12,
    "name": 14,
  },
  "f3": Object {
    "branch": 3,
  },
  "f4": Object {
    "name": "Name",
    "surName": "Surname",
  },
}
`;

exports[`Resource base type resource base: 3, iteration: 5 1`] = `
Object {
  "f1": 3,
  "f2": Object {
    "branch": "CSE",
  },
  "f3": Object {
    "age": null,
  },
  "f4": Object {
    "name": "Name",
    "surName": "Surname",
  },
}
`;

exports[`Resource base type resource base: 3, iteration: 6 1`] = `
Object {
  "f1": 1,
  "f2": Object {
    "address": 12.4353,
    "age": 12,
    "name": 14,
  },
  "f3": Object {
    "branch": 3,
  },
  "f4": Object {
    "name": "Name",
    "surName": "Surname",
  },
}
`;

exports[`Resource base type resource base: 3, iteration: 7 1`] = `
Object {
  "f1": Array [
    "stringify",
    19,
    30,
    19.542,
  ],
  "f2": Object {
    "branch": "CSE",
  },
  "f3": true,
  "f4": Object {
    "name": "Name",
    "surName": "Surname",
  },
}
`;

exports[`Resource base type resource base: 3, iteration: 8 1`] = `
Object {
  "f1": Array [
    "stringify",
    19,
    30,
    19.542,
  ],
  "f2": Object {
    "branch": "CSE",
  },
  "f3": Object {
    "age": null,
  },
  "f4": Object {
    "name": "Name",
    "surName": "Surname",
  },
}
`;

exports[`Resource base type resource base: 3, iteration: 9 1`] = `
Object {
  "f1": 1,
  "f2": Object {
    "address": true,
    "age": 12,
    "name": 14,
  },
  "f3": false,
  "f4": Array [
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
  ],
}
`;

exports[`Resource type resource base 0, iteration: 0 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "eyeballs",
  "class": 28613,
  "identifier": "Rufiyaa",
  "name": 15,
}
`;

exports[`Resource type resource base 0, iteration: 1 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Poland",
  "class": 8372,
  "identifier": "Israel",
  "name": 15,
}
`;

exports[`Resource type resource base 0, iteration: 2 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Incredible",
  "class": 42583,
  "identifier": "District",
  "name": 15,
}
`;

exports[`Resource type resource base 0, iteration: 3 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Stream",
  "class": 12062,
  "identifier": "multi-byte",
  "name": 15,
}
`;

exports[`Resource type resource base 0, iteration: 4 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "maroon",
  "class": 55438,
  "identifier": "plug-and-play",
  "name": 15,
}
`;

exports[`Resource type resource base 0, iteration: 5 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "payment",
  "class": 2942,
  "identifier": "Gorgeous",
  "name": 15,
}
`;

exports[`Resource type resource base 0, iteration: 6 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Small",
  "class": 19940,
  "identifier": "secured line",
  "name": 15,
}
`;

exports[`Resource type resource base 0, iteration: 7 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Buckinghamshire",
  "class": 88785,
  "identifier": "deploy",
  "name": 15,
}
`;

exports[`Resource type resource base 0, iteration: 8 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Incredible",
  "class": 92050,
  "identifier": "Libyan Dinar",
  "name": 15,
}
`;

exports[`Resource type resource base 0, iteration: 9 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "International",
  "class": 17234,
  "identifier": "Global",
  "name": 15,
}
`;

exports[`Resource type resource base 1, iteration: 0 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "users",
  "class": 49111,
  "identifier": "Administrator",
  "name": 15,
}
`;

exports[`Resource type resource base 1, iteration: 1 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Buckinghamshire",
  "class": 84943,
  "identifier": "pixel",
  "name": 15,
}
`;

exports[`Resource type resource base 1, iteration: 2 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Optimization",
  "class": 69340,
  "identifier": "Berkshire",
  "name": 15,
}
`;

exports[`Resource type resource base 1, iteration: 3 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "clicks-and-mortar",
  "class": 43341,
  "identifier": "focus group",
  "name": 15,
}
`;

exports[`Resource type resource base 1, iteration: 4 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "24/365",
  "class": 71139,
  "identifier": "Intelligent Plastic Shirt",
  "name": 15,
}
`;

exports[`Resource type resource base 1, iteration: 5 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Prairie",
  "class": 32198,
  "identifier": "fuchsia",
  "name": 15,
}
`;

exports[`Resource type resource base 1, iteration: 6 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "Practical Steel Cheese",
  "class": 56900,
  "identifier": "Run",
  "name": 15,
}
`;

exports[`Resource type resource base 1, iteration: 7 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "quantify",
  "class": 4802,
  "identifier": "Indiana",
  "name": 15,
}
`;

exports[`Resource type resource base 1, iteration: 8 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "project",
  "class": 4909,
  "identifier": "sky blue",
  "name": 15,
}
`;

exports[`Resource type resource base 1, iteration: 9 1`] = `
Object {
  "address": "faker.random.zipCode",
  "branch": "installation",
  "class": 46365,
  "identifier": "Bedfordshire",
  "name": 15,
}
`;

exports[`Resource type resource base 2, iteration: 0 1`] = `
Object {
  "identifier": "extensible",
  "root": Object {
    "f1": 3.4000000000000004,
    "optional": true,
  },
}
`;

exports[`Resource type resource base 2, iteration: 1 1`] = `
Object {
  "identifier": "dynamic",
  "root": Object {
    "f1": 65472,
    "optional": true,
  },
}
`;

exports[`Resource type resource base 2, iteration: 2 1`] = `
Object {
  "identifier": "Berkshire",
  "root": Object {
    "f1": 31728,
    "optional": true,
  },
}
`;

exports[`Resource type resource base 2, iteration: 3 1`] = `
Object {
  "identifier": "Health",
  "root": Object {
    "f1": Object {
      "addresses": Array [
        Object {
          "city": "New Domenica",
          "street": Object {
            "streetAddress": "2658 Haley Drives",
          },
        },
        Object {
          "city": "Flatleyville",
          "street": "20581-6979",
        },
      ],
    },
    "optional": true,
  },
}
`;

exports[`Resource type resource base 2, iteration: 4 1`] = `
Object {
  "identifier": "turn-key",
  "root": Object {
    "f1": Object {
      "addresses": Array [],
    },
    "optional": true,
  },
}
`;

exports[`Resource type resource base 2, iteration: 5 1`] = `
Object {
  "identifier": "Personal Loan Account",
  "root": Object {
    "f1": Object {
      "addresses": Array [
        Object {
          "city": "Lake Filiberto",
          "street": Object {
            "streetName": "Andreanne Land",
          },
        },
        Object {
          "city": "Macedonia New Jersey",
          "street": Object {
            "streetName": "Yadira Alley",
          },
        },
        Object {
          "city": "Heidenreichville",
          "street": Object {
            "streetName": "Earnestine Locks",
          },
        },
        Object {
          "city": "Port Kelvin",
          "street": "58336-7811",
        },
      ],
    },
    "optional": true,
  },
}
`;

exports[`Resource type resource base 2, iteration: 6 1`] = `
Object {
  "identifier": "Streamlined",
  "root": Object {
    "f1": 17.885,
    "optional": true,
  },
}
`;

exports[`Resource type resource base 2, iteration: 7 1`] = `
Object {
  "identifier": "grow",
  "root": Object {
    "f1": Object {
      "addresses": Array [
        Object {
          "city": "Brand",
          "street": Object {
            "streetName": "Rolfson Parkways",
          },
        },
        Object {
          "city": "Dong",
          "street": "99100-4163",
        },
        Object {
          "city": "COM infrastructures",
          "street": "83498",
        },
        Object {
          "city": "New Katlynview",
          "street": Object {
            "streetAddress": "4227 Pollich Fort",
          },
        },
        Object {
          "city": "Barrowsstad",
          "street": Object {
            "streetName": "Nathan Burgs",
          },
        },
      ],
    },
    "optional": true,
  },
}
`;

exports[`Resource type resource base 2, iteration: 8 1`] = `
Object {
  "identifier": "Som",
  "root": Object {
    "f1": false,
    "optional": true,
  },
}
`;

exports[`Resource type resource base 2, iteration: 9 1`] = `
Object {
  "identifier": "Wooden",
  "root": Object {
    "f1": null,
    "optional": true,
  },
}
`;

exports[`Resource type resource base 3, iteration: 0 1`] = `
Object {
  "f1": 3,
  "f2": Object {
    "branch": "CSE",
  },
  "f3": false,
  "f4": Array [
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
  ],
  "identifier": "deposit",
}
`;

exports[`Resource type resource base 3, iteration: 1 1`] = `
Object {
  "f1": 2,
  "f2": Object {
    "address": null,
    "age": 12,
    "name": 14,
  },
  "f3": false,
  "f4": Object {
    "name": "Name",
    "surName": "Surname",
  },
  "identifier": "initiatives",
}
`;

exports[`Resource type resource base 3, iteration: 2 1`] = `
Object {
  "f1": Array [
    Array [
      Array [
        Array [
          Array [
            "custom.username",
          ],
        ],
      ],
    ],
  ],
  "f2": Object {
    "branch": "CSE",
  },
  "f3": true,
  "f4": Array [
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
  ],
  "identifier": "Jamaica",
}
`;

exports[`Resource type resource base 3, iteration: 3 1`] = `
Object {
  "f1": Array [
    "stringify",
    19,
    30,
    19.542,
  ],
  "f2": Object {
    "address": 12.4353,
    "age": 12,
    "name": 14,
  },
  "f3": 12,
  "f4": Array [
    Object {
      "name": "Name",
      "surName": "Surname",
    },
  ],
  "identifier": "instruction set",
}
`;

exports[`Resource type resource base 3, iteration: 4 1`] = `
Object {
  "f1": Array [
    "stringify",
    19,
    30,
    19.542,
  ],
  "f2": Object {
    "branch": "CSE",
  },
  "f3": Object {
    "age": 29.900000000000002,
  },
  "f4": Array [
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
  ],
  "identifier": "virtual",
}
`;

exports[`Resource type resource base 3, iteration: 5 1`] = `
Object {
  "f1": Array [
    Array [
      Array [
        Array [
          Array [
            "custom.username",
          ],
        ],
      ],
    ],
  ],
  "f2": Object {
    "address": 12.4353,
    "age": 12,
    "name": 14,
  },
  "f3": true,
  "f4": Object {
    "name": "Name",
    "surName": "Surname",
  },
  "identifier": "RSS",
}
`;

exports[`Resource type resource base 3, iteration: 6 1`] = `
Object {
  "f1": 78099,
  "f2": Object {
    "address": 68618,
    "age": 12,
    "name": 14,
  },
  "f3": Array [
    "SIMP",
  ],
  "f4": Object {
    "name": "Name",
    "surName": "Surname",
  },
  "identifier": "Concrete",
}
`;

exports[`Resource type resource base 3, iteration: 7 1`] = `
Object {
  "f1": Array [
    Array [
      Array [
        Array [
          Array [
            "custom.username",
          ],
        ],
      ],
    ],
  ],
  "f2": Object {
    "address": 12.4353,
    "age": 12,
    "name": 14,
  },
  "f3": 12,
  "f4": Array [
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
  ],
  "identifier": "input",
}
`;

exports[`Resource type resource base 3, iteration: 8 1`] = `
Object {
  "f1": Array [
    "stringify",
    19,
    30,
    19.542,
  ],
  "f2": Object {
    "branch": "CSE",
  },
  "f3": Object {
    "age": null,
  },
  "f4": Array [
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
    Object {
      "name": "Name",
      "surName": "Surname",
    },
  ],
  "identifier": "Tasty",
}
`;

exports[`Resource type resource base 3, iteration: 9 1`] = `
Object {
  "f1": 1,
  "f2": Object {
    "address": 89497,
    "age": 12,
    "name": 14,
  },
  "f3": 12,
  "f4": Object {
    "name": "Name",
    "surName": "Surname",
  },
  "identifier": "holistic",
}
`;
